# El_Dourado

./: README.md
Projeto 2/: Aprendendo_Mandarim  The_Voice.py
projeto 1/: load_data_leaf.ipynb  pyproject.toml
projeto 1/.ipynb_checkpoints/: load_data_leaf-checkpoint.ipynb
projeto 1/code/: machine_learning.ipynb  machine_learning_SVM.ipynb
projeto 1/code/.ipynb_checkpoints/: load_data_projeto-checkpoint.ipynb  machine_learning-checkpoint.ipynb
projeto 1/model/Xy/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
projeto 1/model/modelo/: best_estimator.pkl  model_leaf_deploy.pkl
projeto 1/wandb/run-20220215_225338-1lm6afii/: run-1lm6afii.wandb
projeto 1/wandb/run-20220215_225338-1lm6afii/files/: config.yaml  requirements.txt  wandb-metadata.json
projeto 1/wandb/run-20220215_225338-1lm6afii/tmp/code/: load_data_leaf.ipynb
projeto 1/wandb/run-20220216_082751-3vtzcqa8/: run-3vtzcqa8.wandb
projeto 1/wandb/run-20220216_082751-3vtzcqa8/files/: config.yaml  wandb-metadata.json
projeto 1/wandb/run-20220216_082751-3vtzcqa8/tmp/code/: load_data_leaf.ipynb
projeto 1/wandb/run-20220216_083518-zrwfymk2/: run-zrwfymk2.wandb
projeto 1/wandb/run-20220216_083518-zrwfymk2/files/: config.yaml  wandb-metadata.json
projeto 1/wandb/run-20220216_083518-zrwfymk2/tmp/code/: load_data_leaf.ipynb
projeto 1/wandb/run-20220216_131304-3gfgdrjm/: run-3gfgdrjm.wandb
projeto 1/wandb/run-20220216_131304-3gfgdrjm/files/: config.yaml  wandb-metadata.json
projeto 1/wandb/run-20220216_131304-3gfgdrjm/tmp/code/: load_data_leaf.ipynb
