[tool.poetry]
name = "atividade"
version = "0.1.0"
description = ""
authors = ["saraselis <saras1@hotmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
sklearn = "^0.0"
pandas = "^1.4.1"
pandas-profiling = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
